Space scene with ship movement in all directions

--- a/engine.cfg
+++ b/engine.cfg
@@ -6,6 +6,8 @@ icon="res://icon.png"
 
 [input]
 
+move_up=[key(Up), key(W)]
+move_back=[key(Down), key(S)]
 move_left=[key(Left), key(A)]
 move_right=[key(Right), key(D)]
 jump=[key(Up), key(W)]
